Fix the whitespaces stripping out for key-value pairs, put the parsing and validation methods in LuceneIndexOptions